<resources>
    <string name="app_name">MentorGram</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username">username</string>
    <string name="codehiveid">CodehiveId</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already egistered?Login</string>
    <string name="already_registered_sign_in">Already registered? Sign In</string>
</resources>